# EncodingSharp

./: .gitignore  Cargo.toml  EncodingSharp.sln  README.md  nuget.config
EncodingSharp/: DecoderRs.cs  EncoderRs.cs  EncodingRsNative.cs  EncodingSharp.csproj
EncodingSharp.Native/: EncodingSharp.Native.csproj
EncodingSharp.Test/: EncodingFixture.cs  EncodingSharp.Test.csproj  UnitTest1.cs
encoding-rs-glue/: Cargo.toml
encoding-rs-glue/src/: lib.rs
testapp/: Program.cs  testapp.csproj
