[package]
name = "encoding-rs-glue"
version = "0.1.0"
authors = ["itn3000 <itn3000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_c = "0.9.8"

[lib]
crate-type = ["dylib"]

[profile.release]
panic = "abort"